--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="css/fancybox.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/dayjs.min.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/greensock/gsap.min.js"></script>
+    <script src="js/fancybox.umd.js"></script>
   </head>
   <body>
     <header id="header">
@@ -43,8 +45,14 @@
     const list = $("#main .list");
     const btnSearch = $("#search button");
     const searchTxt = $("#searchTxt");
+    const body = $("body");
     btnSearch.on("click", function () {
       kakaoSearch(searchTxt.val());
+    });
+    searchTxt.on("keydown", function (e) {
+      if (e.keyCode === 13) {
+        kakaoSearch(searchTxt.val());
+      }
     });
     const kakaoSearch = function (search) {
       $.ajax({
@@ -57,13 +65,12 @@
           size: 20,
         },
       }).done(function (response) {
-        list.html("");
         let tempHtml = "";
         $.each(response.documents, function (idx, item) {
-          console.log(item);
+          //console.log(item);
           const date = dayjs(item.datetime, "YYYY-MM-dd HH:mm:ss"); // 날짜를 하나 생성
           tempHtml += `<li class="item">
-          <a href="">
+          <a href="${item.image_url}" data-fancybox="image">
             <img src="${item.image_url}" alt="" />
             <div class="info">
               <p class="date">${date.format("YYYY/MM/DD HH:mm:ss")}</p>
@@ -81,6 +88,6 @@
         });
       });
     };
-    kakaoSearch("김태희");
+    //    kakaoSearch("김태희");
   </script>
 </html>
