--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
     console.log("배열은 참조한다.===", recentSearchArray === parseData);
     console.log("recentSearchArray.===", recentSearchArray);
     const parseLocalStorage = function () {
+      localStorage.setItem("recentSearchArray", JSON.stringify(recentSearchArray));
+      parseData = JSON.parse(localStorage.getItem("recentSearchArray"));
       recentSearchArray = [...new Set(parseData)];
       let tempHtml = "";
       $.each(recentSearchArray, function (idx, item) {
-        tempHtml += `<li>${item}</li>`;
+        tempHtml += `<li class="on" data-search="${item}">${item}</li>`;
       });
       recentSearchList.html(tempHtml);
     };
@@ -94,10 +96,7 @@
         },
       }).done(function (response) {
         recentSearchArray.push(searchTxt.val());
-        localStorage.setItem("recentSearchArray", JSON.stringify(recentSearchArray));
         parseLocalStorage();
-        console.log(recentSearchArray);
-
         let tempHtml = "";
         $.each(response.documents, function (idx, item) {
           //console.log(item);
@@ -122,5 +121,10 @@
       });
     };
     //    kakaoSearch("김태희");
+
+    $("#recentSearch .list").on("click", "li", function () {
+      $(this).addClass("on").siblings().removeClass("on");
+      kakaoSearch($(this).data("search"));
+    });
   </script>
 </html>
